--- a/usr/lib/sparky-aptus-appcenter/media-audioplayers.html
+++ b/usr/lib/sparky-aptus-appcenter/media-audioplayers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: Dec 3, 2018 by pavroo
+Last update: Dec 10, 2018 by pavroo
 -->
 	<head>
 		<title>APTus AppCenter</title>
@@ -48,6 +48,13 @@ Last update: Dec 3, 2018 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://app_ario"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/gnome-audio.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://app_ario"><b>Ario</b><br /><span><script>dict.print('media', 'ario');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://app_audacious"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/audacious.svg" class="appicon"><br /></a>
 		</td>
 		<td><a href="aptus://app_audacious"><b>Audacious</b><br /><span><script>dict.print('media', 'audacious');</script></span></a>
@@ -83,7 +90,14 @@ Last update: Dec 3, 2018 by pavroo
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://app_dradio"><img src="/usr/share/icons/ultra-flat-icons/categories/scalable/applications-audio.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_deepin-music"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/gnome-player.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://app_deepin-music"><b>Deepin Music</b><br /><span><script>dict.print('media', 'deepinmusic');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://app_dradio"><img src="images/radio.png" class="appicon"><br /></a>
 		</td>
 		<td><a href="aptus://app_dradio"><b>Dradio</b><br /><span><script>dict.print('media', 'dradio');</script></span></a>
 		<br />&nbsp;
@@ -146,6 +160,13 @@ Last update: Dec 3, 2018 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://app_kradio4"><img src="images/radio.png" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://app_kradio4"><b>Kradio4</b><br /><span><script>dict.print('media', 'kradio4');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://app_lxmusic"><img src="/usr/share/icons/ultra-flat-icons/categories/scalable/applications-audio.svg" class="appicon"><br /></a>
 		</td>
 		<td><a href="aptus://app_lxmusic"><b>LXMusic</b><br /><span><script>dict.print('media', 'lxmusic');</script></span></a>
@@ -160,6 +181,13 @@ Last update: Dec 3, 2018 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://app_mpd"><img src="/usr/share/icons/ultra-flat-icons/categories/scalable/applications-audio.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://app_mpd"><b>MPD</b><br /><span><script>dict.print('media', 'mpd');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://app_musique"><img src="images/musique.png" class="appicon"><br /></a>
 		</td>
 		<td><a href="aptus://app_musique"><b>Musique</b><br /><span><script>dict.print('media', 'musique');</script></span></a>
@@ -167,7 +195,14 @@ Last update: Dec 3, 2018 by pavroo
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://app_pmrp"><img src="/usr/share/icons/ultra-flat-icons/categories/scalable/applications-audio.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_ncmpc"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/gnome-audio.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://app_ncmpc"><b>ncmpc</b><br /><span><script>dict.print('media', 'ncmpc');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://app_pmrp"><img src="images/radio.png" class="appicon"><br /></a>
 		</td>
 		<td><a href="aptus://app_pmrp"><b>PMRP</b><br /><span><script>dict.print('media', 'pmrp');</script></span></a>
 		<br />&nbsp;
@@ -195,6 +230,13 @@ Last update: Dec 3, 2018 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://app_radio"><img src="images/radio.png" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://app_radio"><b>Radio</b><br /><span><script>dict.print('media', 'radio');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://app_radiotray"><img src="images/radio.png" class="appicon"><br /></a>
 		</td>
 		<td><a href="aptus://app_radiotray"><b>RadioTray</b><br /><span><script>dict.print('media', 'radiotray');</script></span></a>
@@ -212,6 +254,13 @@ Last update: Dec 3, 2018 by pavroo
 		<td><a href="aptus://app_sayonara"><img src="images/sayonara.png" class="appicon"><br /></a>
 		</td>
 		<td><a href="aptus://app_sayonara"><b>Sayonara</b><br /><span><script>dict.print('media', 'sayonara');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://app_sonata"><img src="images/cantata.png" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://app_sonata"><b>Sonata</b><br /><span><script>dict.print('media', 'sonata');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
