--- a/usr/lib/sparky-aptus-appcenter/net-communication.html
+++ b/usr/lib/sparky-aptus-appcenter/net-communication.html
@@ -132,6 +132,13 @@ Last update: Dec 9, 2018 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://app_linphone"><img src="/usr/share/icons/ultra-flat-icons/devices/scalable/phone.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://app_linphone"><b>Linphone</b><br /><span><script>dict.print('web', 'linphone');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://app_loqui"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/irc.svg" class="appicon"><br /></a>
 		</td>
 		<td><a href="aptus://app_loqui"><b>Loqui</b><br /><span><script>dict.print('web', 'loqui');</script></span></a>
@@ -142,6 +149,13 @@ Last update: Dec 9, 2018 by pavroo
 		<td><a href="aptus://app_lostirc"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/irc.svg" class="appicon"><br /></a>
 		</td>
 		<td><a href="aptus://app_lostirc"><b>LostIRC</b><br /><span><script>dict.print('web', 'lostirc');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://app_mumble"><img src="/usr/share/icons/ultra-flat-icons/devices/scalable/phone.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://app_mumble"><b>Mumble</b><br /><span><script>dict.print('web', 'mumble');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
