--- a/usr/lib/sparky-aptus-appcenter/multimedia.html
+++ b/usr/lib/sparky-aptus-appcenter/multimedia.html
@@ -48,7 +48,7 @@ Last update: Dec 2, 2018 by pavroo
 		</td>
 		<td><a href="media-videoplayers.html" class="button"><span><script>dict.print('main', 'videoplayers');</script></span></a>
 		</td>
-		<td><a href="media-other.html" class="button"><span><script>dict.print('main', 'others');</script></span></a>
+		<td><a href="media-others.html" class="button"><span><script>dict.print('main', 'others');</script></span></a>
 		</td>
 		<td>
 		</td>
