--- a/usr/lib/sparky-aptus-appcenter/index.html
+++ b/usr/lib/sparky-aptus-appcenter/index.html
@@ -19,7 +19,7 @@ Last update: Dec 2, 2018 by pavroo
 	</div>
 	<div id="menu-wrapper">
 		<ul id="menu">
-			<li><a href="index.html"><span><script>dict.print('main', 'categories');</script></span></a></li>
+			<li><a href="index.html"><span><script>dict.print('main', 'applications');</script></span></a></li>
 			<li><a href="tools.html"><span><script>dict.print('main', 'aptus');</script></span></a></li>
 			<li><a href="info.html"><span><script>dict.print('main', 'info');</script></span></a></li>
 		</ul>
@@ -38,7 +38,7 @@ Last update: Dec 2, 2018 by pavroo
 	<tr>
 		<td><a href="accessories.html" class="button"><span><script>dict.print('main', 'accessories');</script></span></a>
 		</td>
-		<td><a href="desktop.html" class="button"><span><script>dict.print('main', 'desktops');</script></span></a>
+		<td><a href="desktops.html" class="button"><span><script>dict.print('main', 'desktops');</script></span></a>
 		</td>
 		<td><a href="development.html" class="button"><span><script>dict.print('main', 'development');</script></span></a>
 		</td>
