--- a/usr/lib/sparky-aptus-appcenter/media-codecs.html
+++ b/usr/lib/sparky-aptus-appcenter/media-codecs.html
@@ -19,7 +19,7 @@ Last update: Dec 11, 2018 by pavroo
 	<div id="menu-wrapper-back">
 		<ul id="menu">
 			<li><a href="multimedia.html"><span>&laquo;-- </span></a></li>
-			<li><a href="index.html"><span><script>dict.print('main', 'categories');</script></span></a></li>
+			<li><a href="index.html"><span><script>dict.print('main', 'applications');</script></span></a></li>
 			<li><a href="tools.html"><span><script>dict.print('main', 'aptus');</script></span></a></li>
 			<li><a href="info.html"><span><script>dict.print('main', 'info');</script></span></a></li>
 		</ul>
