--- a/usr/lib/sparky-aptus-appcenter/info.html
+++ b/usr/lib/sparky-aptus-appcenter/info.html
@@ -18,7 +18,7 @@ Last update: Dec 2, 2018 by pavroo
 	</div>
 	<div id="menu-wrapper">
 		<ul id="menu">
-			<li><a href="index.html"><span><script>dict.print('main', 'categories');</script></span></a></li>
+			<li><a href="index.html"><span><script>dict.print('main', 'applications');</script></span></a></li>
 			<li><a href="tools.html"><span><script>dict.print('main', 'aptus');</script></span></a></li>
 			<li><a href="info.html"><span><script>dict.print('main', 'info');</script></span></a></li>
 		</ul>
