--- a/usr/lib/sparky-aptus-appcenter/graphics.html
+++ b/usr/lib/sparky-aptus-appcenter/graphics.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: Dec 2, 2018 by pavroo
+Last update: Dec 18, 2018 by pavroo
 -->
 	<head>
 		<title>APTus AppCenter</title>
@@ -36,19 +36,19 @@ Last update: Dec 2, 2018 by pavroo
 <div class="column3">
 <tbody>
 	<tr>
-		<td><a href="media-audioeditors.html" class="button"><span><script>dict.print('main', 'audioeditors');</script></span></a>
+		<td><a href="graphics-editors.html" class="button"><span><script>dict.print('main', 'graphicseditors');</script></span></a>
 		</td>
-		<td><a href="media-audioplayers.html" class="button"><span><script>dict.print('main', 'audioplayers');</script></span></a>
+		<td><a href="graphics-viewers.html" class="button"><span><script>dict.print('main', 'graphicsviewers');</script></span></a>
 		</td>
-		<td><a href="media-codecs.html" class="button"><span><script>dict.print('main', 'codecs');</script></span></a>
+		<td><a href="graphics-screenshots.html" class="button"><span><script>dict.print('main', 'graphicsscreenshots');</script></span></a>
 		</td>
 	</tr>
 	<tr>
-		<td><a href="media-videoeditors.html" class="button"><span><script>dict.print('main', 'videoeditors');</script></span></a>
+		<td><a href="graphics-others.html" class="button"><span><script>dict.print('main', 'others');</script></span></a>
 		</td>
-		<td><a href="media-videoplayers.html" class="button"><span><script>dict.print('main', 'videoplayers');</script></span></a>
+		<td>
 		</td>
-		<td><a href="media-others.html" class="button"><span><script>dict.print('main', 'others');</script></span></a>
+		<td>
 		</td>
 	</tr>
 </tbody>
