--- a/usr/lib/sparky-aptus-appcenter/net-email.html
+++ b/usr/lib/sparky-aptus-appcenter/net-email.html
@@ -41,6 +41,13 @@ Last update: Dec 6, 2018 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://app_balsa"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/e-mail.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://app_balsa"><b>Balsa</b><br /><span><script>dict.print('web', 'balsa');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://app_claws-mail"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/claws-mail.svg" class="appicon"><br /></a>
 		</td>
 		<td><a href="aptus://app_claws-mail"><b>Claws-Mail</b><br /><span><script>dict.print('web', 'clawsmail');</script></span></a>
