--- a/usr/lib/sparky-aptus-appcenter/office-spreadsheet.html
+++ b/usr/lib/sparky-aptus-appcenter/office-spreadsheet.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: Dec 22, 2018 by pavroo
+Last update: Dec 20, 2018 by pavroo
 -->
 	<head>
 		<title>APTus AppCenter</title>
@@ -18,7 +18,7 @@ Last update: Dec 22, 2018 by pavroo
 	</div>
 	<div id="menu-wrapper-back">
 		<ul id="menu">
-			<li><a href="multimedia.html"><span>&laquo;-- </span></a></li>
+			<li><a href="office.html"><span>&laquo;-- </span></a></li>
 			<li><a href="index.html"><span><script>dict.print('main', 'applications');</script></span></a></li>
 			<li><a href="tools.html"><span><script>dict.print('main', 'aptus');</script></span></a></li>
 			<li><a href="info.html"><span><script>dict.print('main', 'info');</script></span></a></li>
@@ -34,30 +34,30 @@ Last update: Dec 22, 2018 by pavroo
 <div class="column5">
 <tbody>
 	<tr>
-		<td><a href="aptus://app_kazam"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/gtk-recordmydesktop.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_calligrasheets"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/calligrasheets.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://app_kazam"><b>Kazam</b><br /><span><script>dict.print('media', 'kazam');</script></span></a>
+		<td><a href="aptus://app_calligrasheets"><b>Calligra Sheets</b><br /><span><script>dict.print('office', 'calligrasheets');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://app_kover"><img src="/usr/share/icons/ultra-flat-icons/devices/scalable/media-cdrom.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_gnumeric"><img src="/usr/share/icons/ultra-flat-icons/mimetypes/scalable/application-table.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://app_kover"><b>Kover</b><br /><span><script>dict.print('media', 'kover');</script></span></a>
+		<td><a href="aptus://app_numeric"><b>Gnumeric</b><br /><span><script>dict.print('office', 'gnumeric');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://app_lxmms2"><img src="/usr/share/icons/ultra-flat-icons/actions/scalable/system-run.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_pyspread"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/calligrasheets.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://app_lxmms2"><b>Lxmms2</b><br /><span><script>dict.print('media', 'lxmms2');</script></span></a>
+		<td><a href="aptus://app_pyspread"><b>Pyspread</b><br /><span><script>dict.print('office', 'pyspread');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://app_vokoscreen"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/gtk-recordmydesktop.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_sc"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/calligrasheets.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://app_vokoscreen"><b>Vokoscreen</b><br /><span><script>dict.print('media', 'vokoscreen');</script></span></a>
+		<td><a href="aptus://app_sc"><b>sc</b><br /><span><script>dict.print('office', 'scoffice');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
