--- a/usr/lib/sparky-aptus-appcenter/office.html
+++ b/usr/lib/sparky-aptus-appcenter/office.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: Dec 2, 2018 by pavroo
+Last update: Dec 20, 2018 by pavroo
 -->
 	<head>
 		<title>APTus AppCenter</title>
@@ -44,13 +44,13 @@ Last update: Dec 2, 2018 by pavroo
 		</td>
 	</tr>
 	<tr>
-		<td><a href="office-html.html" class="button"><span><script>dict.print('main', 'htmleditors');</script></span></a>
+		<td><a href="office-note.html" class="button"><span><script>dict.print('main', 'notes');</script></span></a>
 		</td>
-		<td><a href="office-officesuite.html" class="button"><span><script>dict.print('main', 'officesuite');</script></span></a>
+		<td><a href="office-suite.html" class="button"><span><script>dict.print('main', 'officesuite');</script></span></a>
 		</td>		
-		<td><a href="office-spreedsheet.html" class="button"><span><script>dict.print('main', 'spreedsheet');</script></span></a>
+		<td><a href="office-spreadsheet.html" class="button"><span><script>dict.print('main', 'spreadsheet');</script></span></a>
 		</td>
-		</tr>
+	</tr>
 	<tr>
 		<td><a href="office-text.html" class="button"><span><script>dict.print('main', 'texteditors');</script></span></a>
 		</td>
