--- a/usr/lib/sparky-aptus-appcenter/media-burn.html
+++ b/usr/lib/sparky-aptus-appcenter/media-burn.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: Jan 11, 2019 by pavroo
+Last update: Jan 9, 2019 by pavroo
 -->
 	<head>
 		<title>APTus AppCenter</title>
@@ -34,37 +34,37 @@ Last update: Jan 11, 2019 by pavroo
 <div class="column5">
 <tbody>
 	<tr>
-		<td><a href="aptus://app_gtk-recordmydesktop"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/gtk-recordmydesktop.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_brasero"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/brasero.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://app_gtk-recordmydesktop"><b>GTK-RecordMyDesktop</b><br /><span><script>dict.print('media', 'gtkrecordmydesktop');</script></span></a>
+		<td><a href="aptus://app_brasero"><b>Brasero</b><br /><span><script>dict.print('media', 'brasero');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://app_kazam"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/gtk-recordmydesktop.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_cdrdao"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/brasero.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://app_kazam"><b>Kazam</b><br /><span><script>dict.print('media', 'kazam');</script></span></a>
+		<td><a href="aptus://app_cdrdao"><b>Cdrdao</b><br /><span><script>dict.print('media', 'cdrdao');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://app_kover"><img src="/usr/share/icons/ultra-flat-icons/devices/scalable/media-cdrom.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_k3b"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/k3b.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://app_kover"><b>Kover</b><br /><span><script>dict.print('media', 'kover');</script></span></a>
+		<td><a href="aptus://app_k3b"><b>K3B</b><br /><span><script>dict.print('media', 'k3b');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://app_lxmms2"><img src="/usr/share/icons/ultra-flat-icons/actions/scalable/system-run.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_simpleburn"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/brasero.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://app_lxmms2"><b>Lxmms2</b><br /><span><script>dict.print('media', 'lxmms2');</script></span></a>
+		<td><a href="aptus://app_simpleburn"><b>SimpleBurn</b><br /><span><script>dict.print('media', 'simpleburn');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://app_vokoscreen"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/gtk-recordmydesktop.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_xfburn"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/xfburn.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://app_vokoscreen"><b>Vokoscreen</b><br /><span><script>dict.print('media', 'vokoscreen');</script></span></a>
+		<td><a href="aptus://app_xfburn"><b>Xfburn</b><br /><span><script>dict.print('media', 'xfburn');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
