--- a/usr/lib/sparky-aptus-appcenter/net-communication.html
+++ b/usr/lib/sparky-aptus-appcenter/net-communication.html
@@ -76,6 +76,13 @@ Last update: Dec 9, 2018 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://app_franz"><img src="images/franz.png" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://app_franz"><b>Franz</b><br /><span><script>dict.print('web', 'franz');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://app_gajim"><img src="images/gajim.png" class="appicon"><br /></a>
 		</td>
 		<td><a href="aptus://app_gajim"><b>Gajim</b><br /><span><script>dict.print('web', 'gajim');</script></span></a>
