--- a/usr/lib/sparky-aptus-appcenter/media-audioplayers.html
+++ b/usr/lib/sparky-aptus-appcenter/media-audioplayers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: Dec 10, 2018 by pavroo
+Last update: Dec 16, 2018 by pavroo
 -->
 	<head>
 		<title>APTus AppCenter</title>
@@ -62,6 +62,13 @@ Last update: Dec 10, 2018 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://app_betaradio"><img src="images/radio.png" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://app_betaradio"><b>BetaRadio</b><br /><span><script>dict.print('media', 'betaradio');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://app_cantata"><img src="images/cantata.png" class="appicon"><br /></a>
 		</td>
 		<td><a href="aptus://app_cantata"><b>Cantata</b><br /><span><script>dict.print('media', 'cantata');</script></span></a>
@@ -83,6 +90,13 @@ Last update: Dec 10, 2018 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://app_daisy-player"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/alsaplayer.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://app_daisy-player"><b>Daisy Player</b><br /><span><script>dict.print('media', 'daisy');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://app_deadbeef"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/deadbeef.svg" class="appicon"><br /></a>
 		</td>
 		<td><a href="aptus://app_deadbeef"><b>DeaDBeeF</b><br /><span><script>dict.print('media', 'deadbeef');</script></span></a>
@@ -100,6 +114,13 @@ Last update: Dec 10, 2018 by pavroo
 		<td><a href="aptus://app_dradio"><img src="images/radio.png" class="appicon"><br /></a>
 		</td>
 		<td><a href="aptus://app_dradio"><b>Dradio</b><br /><span><script>dict.print('media', 'dradio');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://app_esperanza"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/gnome-audio.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://app_esperanza"><b>Esperanza</b><br /><span><script>dict.print('media', 'esperanza');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
@@ -128,6 +149,20 @@ Last update: Dec 10, 2018 by pavroo
 		<td><a href="aptus://app_gnome-music"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/gnome-player.svg" class="appicon"><br /></a>
 		</td>
 		<td><a href="aptus://app_gnome-music"><b>GNOME Music</b><br /><span><script>dict.print('media', 'gnomemusic');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://app_gogglesmm"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/gnome-audio.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://app_gogglesmm"><b>Goggles Music Manager</b><br /><span><script>dict.print('media', 'gogglesmm');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://app_goobox"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/gnome-audio.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://app_goobox"><b>Goobox</b><br /><span><script>dict.print('media', 'goobox');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
