--- a/usr/lib/sparky-aptus-appcenter/media-burn.html
+++ b/usr/lib/sparky-aptus-appcenter/media-burn.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: Jan 9, 2019 by pavroo
+Last update: Jan 16, 2019 by pavroo
 -->
 	<head>
 		<title>APTus AppCenter</title>
@@ -37,6 +37,13 @@ Last update: Jan 9, 2019 by pavroo
 		<td><a href="aptus://app_brasero"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/brasero.svg" class="appicon"><br /></a>
 		</td>
 		<td><a href="aptus://app_brasero"><b>Brasero</b><br /><span><script>dict.print('media', 'brasero');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://app_kylin-burner"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/brasero.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://app_kylin-burner"><b>Burner</b><br /><span><script>dict.print('media', 'burner');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
