--- a/usr/lib/sparky-aptus-appcenter/media-videoeditors.html
+++ b/usr/lib/sparky-aptus-appcenter/media-videoeditors.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: Jan 11, 2019 by pavroo
+Last update: Jan 15, 2019 by pavroo
 -->
 	<head>
 		<title>APTus AppCenter</title>
@@ -33,6 +33,13 @@ Last update: Jan 11, 2019 by pavroo
 <div class="column4">
 <div class="column5">
 <tbody>
+	<tr>
+		<td><a href="aptus://app_acidrip"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/acidrip.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://app_acidrip"><b>AcidRip</b><br /><span><script>dict.print('media', 'acidrip');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
 	<tr>
 		<td><a href="aptus://app_avidemux"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/avidemux.svg" class="appicon"><br /></a>
 		</td>
@@ -100,6 +107,13 @@ Last update: Jan 11, 2019 by pavroo
 		<td><a href="aptus://app_openshot"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/openshot.svg" class="appicon"><br /></a>
 		</td>
 		<td><a href="aptus://app_openshot"><b>OpenShot</b><br /><span><script>dict.print('media', 'openshot');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://app_pitivi"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/pitivi.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://app_pitivi"><b>PiTiVi</b><br /><span><script>dict.print('media', 'pitivi');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
