--- a/usr/lib/sparky-aptus-appcenter/multimedia.html
+++ b/usr/lib/sparky-aptus-appcenter/multimedia.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: Jan 9, 2019 by pavroo
+Last update: Jan 15, 2019 by pavroo
 -->
 	<head>
 		<title>APTus AppCenter</title>
@@ -36,9 +36,9 @@ Last update: Jan 9, 2019 by pavroo
 <div class="column3">
 <tbody>
 	<tr>
-		<td><a href="media-audioeditors.html" class="button"><span><script>dict.print('main', 'audioeditors');</script></span></a>
-		</td>
 		<td><a href="media-audioplayers.html" class="button"><span><script>dict.print('main', 'audioplayers');</script></span></a>
+		</td>
+		<td><a href="media-audiotools.html" class="button"><span><script>dict.print('main', 'audiotools');</script></span></a>
 		</td>
 		<td><a href="media-burn.html" class="button"><span><script>dict.print('main', 'burn');</script></span></a>
 		</td>
