--- a/01-yad/lib/sparky-aptus-appcenter/net-communication.html
+++ b/01-yad/lib/sparky-aptus-appcenter/net-communication.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: July 18, 2020 by pavroo
+Last update: July 30, 2020 by pavroo
 -->
 	<head>
 		<title>Network -> Communication | APTus AppCenter</title>
@@ -49,12 +49,14 @@ Last update: July 18, 2020 by pavroo
 		</td>
 		<!--<td><a href="aptus://netcom_ekg2" class="button1"><img src="images/im.svg" class="appicon"><br />EKG2</a>
 		</td>-->
-		<td><a href="aptus://netcom_empathy" class="button1"><img src="images/im.svg" class="appicon"><br />Empathy</a>
+		<td><a href="aptus://netcom_element-desktop" class="button1"><img src="images/im.svg" class="appicon"><br />Element Desktop</a>
 		</td>
-		<td><a href="aptus://netcom_franz" class="button1"><img src="images/franz.svg" class="appicon"><br />Franz</a>
+		<td><a href="aptus://netcom_empathy" class="button1"><img src="images/im.svg" class="appicon"><br />Empathy</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_franz" class="button1"><img src="images/franz.svg" class="appicon"><br />Franz</a>
+		</td>
 		<td><a href="aptus://netcom_gajim" class="button1"><img src="images/gajim.svg" class="appicon"><br />Gajim</a>
 		</td>
 		<td><a href="aptus://netcom_hexchat" class="button1"><img src="images/hexchat.svg" class="appicon"><br />HexChat</a>
@@ -67,10 +69,10 @@ Last update: July 18, 2020 by pavroo
 		</td>
 		<!--<td><a href="aptus://netcom_kopete" class="button1"><img src="images/im.svg" class="appicon"><br />Kopete</a>
 		</td>-->
-		<td><a href="aptus://netcom_kvirc" class="button1"><img src="images/irc.svg" class="appicon"><br />KVIrc</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_kvirc" class="button1"><img src="images/irc.svg" class="appicon"><br />KVIrc</a>
+		</td>
 		<!--<td><a href="aptus://netcom_linphone" class="button1"><img src="images/phone.svg" class="appicon"><br />Linphone</a>
 		</td>-->
 		<td><a href="aptus://netcom_loqui" class="button1"><img src="images/irc.svg" class="appicon"><br />Loqui</a>
@@ -85,15 +87,13 @@ Last update: July 18, 2020 by pavroo
 		</td>
 		<!--<td><a href="aptus://netcom_pork" class="button1"><img src="images/irc.svg" class="appicon"><br />Pork</a>
 		</td>-->
-		<td><a href="aptus://netcom_psi" class="button1"><img src="images/im.svg" class="appicon"><br /><Psi</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_psi" class="button1"><img src="images/im.svg" class="appicon"><br /><Psi</a>
+		</td>
 		<td><a href="aptus://netcom_quassel" class="button1"><img src="images/quassel.svg" class="appicon"><br />Quassel</a>
 		</td>
 		<td><a href="aptus://netcom_quaternion" class="button1"><img src="images/im.svg" class="appicon"><br />Quaternion</a>
-		</td>
-		<td><a href="aptus://netcom_riot-desktop" class="button1"><img src="images/im.svg" class="appicon"><br />Riot Desktop</a>
 		</td>
 		<td><a href="aptus://netcom_scrollz" class="button1"><img src="images/irc.svg" class="appicon"><br />ScrollZ</a>
 		</td>
